@@ -18,12 +18,9 @@
 #' convergence warnings, as the MCMC chains corresponding
 #' to different datasets may not necessarily overlap, even 
 #' if each of the original models did converge.
-#' If you want to make sure that the convergence
-#' warnings are not caused by real problems in some of the 
-#' original models, run \code{brm_repeat} with \code{combine = FALSE},
-#' check for convergence manually, and then combine the models
-#' via \code{combine_models{mlist = fits, check_data = FALSE}},
-#' where \code{fits} denotes the output of \code{brms_repeat}.
+#' To find out whether each of the original models converged,
+#' investigate \code{attributes(fit)$rhats}, where \code{fit} 
+#' denotes the output of \code{brm_repeat}.
 #' 
 #' @return If \code{combine = TRUE} a single \code{brmsfit} object. 
 #' If \code{combine = FALSE} a list of \code{brmsfit} objects. 
@@ -41,11 +38,12 @@
 #' fit_imp2 <- brm_repeat(bmi~age+hyp+chl, data = imp, chains = 1)
 #' summary(fit_imp2)
 #' plot(fit_imp2, pars = "^b_")
+#' # investigate convergence of the original models
+#' attributes(fit_imp2)$rhats
 #' }
 #' 
 #' @export
 brm_repeat <- function(formula, data, combine = TRUE, ...) {
-  dots <- list(...)
   combine <- as_one_logical(combine)
   data.name <- substr(collapse(deparse(substitute(data))), 1, 50)
   if (inherits(data, "mids")) {
@@ -55,17 +53,26 @@ brm_repeat <- function(formula, data, combine = TRUE, ...) {
     stop2("'data' must be a list of data.frames.")
   }
   fits <- vector("list", length(data))
-  args <- c(list(formula, data = data[[1]]), dots)
-  fits[[1]] <- do.call(brm, args)
+  message("Fitting imputed model 1")
+  fits[[1]] <- brm(formula, data = data[[1]], ...)
   fits[[1]]$data.name <- data.name
+  rhats <- data.frame(as.list(rhat(fits[[1]])))
+  if (any(rhats > 1.1)) {
+    warning2("Imputed model 1 did not converge.")
+  }
   for (i in seq_along(data)[-1]) {
-    args <- c(list(fits[[1]], newdata = data[[i]]), dots)
-    fits[[i]] <- do.call(update, args)
+    message("Fitting imputed model ", i)
+    fits[[i]] <- update(fits[[1]], newdata = data[[i]], ...)
+    rhat_i <- data.frame(as.list(rhat(fits[[i]])))
+    if (any(rhat_i > 1.1)) {
+      warning2("Imputed model ", i, " did not converge.")
+    }
+    rhats <- rbind(rhats, rhat_i)
   }
   if (combine) {
     fits <- combine_models(mlist = fits, check_data = FALSE)
   }
-  fits
+  structure(fits, rhats = rhats)
 }
 
 #' Combine Models fitted with \pkg{brms}
